--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body {
+    background: #1e1f24;
     color: #333;
     text-align: center;
     font-size: 16px;
@@ -16,10 +17,15 @@ body {
     padding: 0.5em;
 }
 
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+}
+
 #cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
-    font-size: 0.0em;
+    font-size: 0.8em;
 }
 
 #container{
@@ -33,4 +39,9 @@ body {
 #container h1{
     font-size: 20px;
 
+}
+
+#post{
+    background: white;
+    padding: 1em;
 }
