--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,7 +30,19 @@ body {
     margin: 0 auto;
 }
 
+
 #container h1{
     font-size: 20px;
 
+}
+
+#post{
+    padding: 1em;
+}
+
+#footer{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
